--- a/GithubEnterpriseLibraryTK/Web.config
+++ b/GithubEnterpriseLibraryTK/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,10 +6,16 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <dataConfiguration defaultDatabase="Sales" />
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-GithubEnterpriseLibraryTK-20151005063128.mdf;Initial Catalog=aspnet-GithubEnterpriseLibraryTK-20151005063128;Integrated Security=True"
+    <add name="Sales" connectionString="Data Source=localhost; Database=sales;User ID=root; Password=123456;"
+      providerName="MySql.Data.MySqlClient" />
+    <!--<add name="Sales" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Sales.mdf;Initial Catalog=Sales;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Sales.mdf;Initial Catalog=Sales;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
